crates/strider-analyze/tests/snapshots/x86__builtins__popcount32.snap
---
source: crates/strider/tests/v1_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#88cc88", label=EAX, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#88cc88", label=EDX, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#88cc88", label=ST0, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "6" [label="init\nXMM0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="init\nST0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="init\nEDX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "3" [label="ShiftRight:u32", shape=box, fillcolor="#2d2d2d"];
  "7" -> "3" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "8" -> "3" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "8" [label="const 0x18:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "7" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "9" -> "7" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "9" [label="Mul:u64", shape=box, fillcolor="#2d2d2d"];
  "10" -> "9" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "11" -> "9" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "11" [label="const 0x1010101:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "10" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "12" -> "10" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "12" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "13" -> "12" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "14" -> "12" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "14" [label="const 0xf0f0f0f:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "13" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "15" -> "13" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "16" -> "13" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "16" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "17" -> "16" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "18" -> "16" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "18" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "19" -> "18" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "20" -> "18" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "20" [label="const 0x33333333:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "19" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "21" -> "19" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "22" -> "19" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "22" [label="Neg\nu32 → u32", shape=box, fillcolor="#2d2d2d"];
  "23" -> "22" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "23" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "24" -> "23" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "25" -> "23" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "25" [label="const 0x55555555:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "24" [label="ShiftRight:u32", shape=box, fillcolor="#2d2d2d"];
  "21" -> "24" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "26" -> "24" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "26" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "21" [label="arg[0] ← ram[sp + 4]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "17" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "27" -> "17" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "28" -> "17" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "28" [label="const 0x33333333:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "27" [label="ShiftRight:u32", shape=box, fillcolor="#2d2d2d"];
  "19" -> "27" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "29" -> "27" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "29" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "15" [label="ShiftRight:u32", shape=box, fillcolor="#2d2d2d"];
  "16" -> "15" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "30" -> "15" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "30" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "2" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
